--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:name=".App"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".features.event.list.presentation.AllEventsActivity"
+            android:name=".features.event.list.presentation.EventsListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
