--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".features.event.add.presentation.AddEventActivity" />
         <activity android:name=".features.auth.signin.presentation.SignInActivity" />
     </application>
 
