--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".features.event.add.presentation.AddEventActivity" />
         <activity android:name=".features.auth.signin.presentation.SignInActivity" />
         <activity android:name=".features.event.full.presentation.FullEventActivity" />
+        <activity android:name=".features.reg.presenter.RegActivity"></activity>
     </application>
 
 </manifest>
