assigned_event done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
             android:name=".features.event.my.presenter.MyEventsActivity"
             android:label="@string/title_activity_my_events"
             android:theme="@style/AppTheme"></activity>
+        <activity android:name=".features.event.assigned.presenter.AssignedActivity"/>
+
     </application>
 
 </manifest>
