--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,11 @@
         <activity
             android:name=".features.event.my.presenter.MyEventsActivity"
             android:label="@string/title_activity_my_events"
-            android:theme="@style/AppTheme"></activity>
-        <activity android:name=".features.event.assigned.presenter.AssignedActivity"/>
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".features.event.assigned.presenter.AssignedActivity"
+            android:label="@string/title_assigned_events"
+            />
 
             android:theme="@style/AppTheme" />
     </application>
