--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.instabug.library:instabug:8.0.2'
+    implementation 'com.yandex.android:mobmetricalib:3.1.0'
+    implementation 'com.android.installreferrer:installreferrer:1.0'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
