--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,19 @@
     package="tech.blur.eventhub">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 
     <application
-        android:name="tech.blur.eventhub.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/ico"
         android:label="@string/app_name"
@@ -14,7 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="tech.blur.eventhub.features.event.list.presentation.EventsListActivity"
+            android:name=".features.event.list.presentation.EventsListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -24,23 +33,37 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="tech.blur.eventhub.features.event.add.presentation.AddEventActivity"
+            android:name=".features.event.add.presentation.AddEventActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name="tech.blur.eventhub.features.auth.signin.presentation.SignInActivity" />
+        <activity android:name=".features.auth.signin.presentation.SignInActivity" />
         <activity
-            android:name="tech.blur.eventhub.features.event.full.presentation.FullEventActivity"
-            android:label="@string/title_new_event"/>
-        <activity android:name="tech.blur.eventhub.features.auth.signup.presenter.SignUpActivity" />
+            android:name=".features.event.full.presentation.FullEventActivity"
+            android:label="@string/title_new_event" />
+        <activity android:name=".features.auth.signup.presenter.SignUpActivity" />
         <activity
-            android:name="tech.blur.eventhub.features.event.my.presenter.MyEventsActivity"
+            android:name=".features.event.my.presenter.MyEventsActivity"
             android:label="@string/title_activity_my_events"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="tech.blur.eventhub.features.event.assigned.presenter.AssignedActivity"
+            android:name=".features.event.assigned.presenter.AssignedActivity"
             android:label="@string/title_assigned_events"
-            />
-
             android:theme="@style/AppTheme" />
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".features.event.add.presentation.MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
